# spot_arm

./: LICENSE  README.md
arm_movement/: CMakeLists.txt  package.xml
arm_movement/src/: arm_mover.py
matlab/: extract_timestamp_section.m  get_transforms.m  interp_quaternion.m  plot_hand_handrequest_difference.m  to_transform.m
scripts/: get_spot_battery_percentage  latency_measurer.py  publish_clock.py
spot_arm_interface/: CMakeLists.txt  package.xml
spot_arm_interface/config/: default.yaml
spot_arm_interface/include/spot_arm_interface/: bounding_box.hpp  conversion.hpp  spot_arm_interface.hpp  spot_move_client.hpp
spot_arm_interface/launch/: spot_arm_camera_republish.launch  spot_arm_interface.launch
spot_arm_interface/rviz/: tf.rviz
spot_arm_interface/src/: bounding_box.cpp  conversion.cpp  spot_arm_interface.cpp  spot_arm_interface_main.cpp  spot_move_client.cpp  spot_move_client_main.cpp
unity_transform/: CMakeLists.txt  package.xml
unity_transform/launch/: unity_to_ros_pose.launch
unity_transform/src/: transform_coordinates.py  unity_to_ros_pose.py
